Prevent team image from overstretching

--- a/indians/static/scss/components/team_page.scss
+++ b/indians/static/scss/components/team_page.scss
@@ -43,7 +43,7 @@
           .team-img {
             max-height: 440px;
             max-width: 100%;
-
+            object-fit: contain;
           }
 
           .contact, .leader {
